site title in English and Russian

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -1,3 +1,3 @@
 {
-    "site_title": "Centenaire de l'archevêché des églises Orthodoxes de tradition russe en Europe occidentale"
+    "site_title": "100-летие Архиепископия Православных Церквей Русской Традиции в Западной Европе"
 }
