--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,3 +1,3 @@
 {
-    "site_title": "Centenaire de l'archevêché des églises Orthodoxes de tradition russe en Europe occidentale"
+    "site_title": "Centenary of the Archdiocese of Orthodox Churches of Russian Tradition in Western Europe"
 }
