--- a/locales/en/pageslug.json
+++ b/locales/en/pageslug.json
@@ -1,11 +1,11 @@
 {
-    "page_info_label": "Informations de la page",
-    "page_info_created_at": "Date de création",
-    "page_info_modified_at": "Date de modification",
-    "page_info_author": "Auteur",
+    "page_info_label": "Page information",
+    "page_info_created_at": "Creation date",
+    "page_info_modified_at": "Date of last modification",
+    "page_info_author": "Author",
     "page_info_source": "Source",
-    "page_info_credit_photo": "Crédit photo",
-    "page_info_credit_audio": "Crédit audio",
-    "page_info_credit_document": "Crédit document",
-    "page_info_credit_video": "Crédit video"
+    "page_info_credit_photo": "Photo credit",
+    "page_info_credit_audio": "Audio credit",
+    "page_info_credit_document": "Document credit",
+    "page_info_credit_video": "Video credit"
 }
