inversé le français et l'anglais sur la home page

--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,7 +1,6 @@
 {
-    "title": "Centenary of the Archdiocese",
-    "paragraph_1": "The Archdiocese is an Orthodox ecclesial entity which unites the Churches of the Russian Tradition in Western Europe.",
-    "paragraph_2": "Canonically attached to the Patriarchate of Moscow, the Archdiocese is actually directed by His Eminence Metropolitan John of Dubna. Remaining faithful to its spiritual and liturgical roots of the Russian Tradition, it conserves the ecclesial and pastoral particularities as they have been established at the Council of Moscow of 1917-1918, as well as the heritage of its own Tradition.",
-    "paragraph_3": "Founded in1921 by the Holy Patriarch Tikhon and entrusted to Metropolitan Eulogy, the Archdiocese celebrates this year its centenary. On this occasion and in these times of the  Covid19 pandemy, we have created this site which offers a virtual presentation of the prominent events of these last hundred years. We present in particular the ecclesial and cultural legacy of the Archdiocese.",
-    "paragraph_4": "This site was produced in partnership with the cultural service of the French National Audiovisual Institute (INA)"
+    "title": "Centenaire de l'Archevêché",
+    "paragraph_1": "L’Archevêché est une entité ecclésiale orthodoxe réunissant les églises de tradition russe en Europe occidentale.",
+    "paragraph_2": "Rattaché canoniquement au Patriarcat de Moscou, l’Archevêché est actuellement dirigé par Son Éminence le métropolite Jean de Doubna. Fidèle à son ancrage spirituel et liturgique issu de la tradition russe, il conserve les spécificités de son fonctionnement ecclésial et pastoral tel qu’établi par le Concile de Moscou de 1917-1918 ainsi que l'héritage de sa propre tradition.",
+    "paragraph_3": "Fondé en 1921 par le saint patriarche Tikhon et confiée au métropolite Euloge, l'Archevêché célèbre cette année son centenaire. A cette occasion et en ces temps d'épidémie de Covid19, nous avons réalisé ce site d'exposition virtuelle qui retrace les événements marquants de ces cent dernières années. Nous présentons notamment les contributions de l'Archevêché au patrimoine éclesial et culturel."
 }
