réparé le texte de la page d'accueil en français et en russe

--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -2,5 +2,6 @@
     "title": "Centenaire de l'Archevêché",
     "paragraph_1": "L’Archevêché est une entité ecclésiale orthodoxe réunissant les églises de tradition russe en Europe occidentale.",
     "paragraph_2": "Rattaché canoniquement au Patriarcat de Moscou, l’Archevêché est actuellement dirigé par Son Éminence le métropolite Jean de Doubna. Fidèle à son ancrage spirituel et liturgique issu de la tradition russe, il conserve les spécificités de son fonctionnement ecclésial et pastoral tel qu’établi par le Concile de Moscou de 1917-1918 ainsi que l'héritage de sa propre tradition.",
-    "paragraph_3": "Fondé en 1921 par le saint patriarche Tikhon et confiée au métropolite Euloge, l'Archevêché célèbre cette année son centenaire. A cette occasion et en ces temps d'épidémie de Covid19, nous avons réalisé ce site d'exposition virtuelle qui retrace les événements marquants de ces cent dernières années. Nous présentons notamment les contributions de l'Archevêché au patrimoine éclesial et culturel."
+    "paragraph_3": "Fondé en 1921 par le saint patriarche Tikhon et confiée au métropolite Euloge, l'Archevêché célèbre cette année son centenaire. A cette occasion et en ces temps d'épidémie de Covid19, nous avons réalisé ce site d'exposition virtuelle qui retrace les événements marquants de ces cent dernières années. Nous présentons notamment les contributions de l'Archevêché au patrimoine éclesial et culturel.",
+    "paragraph_4": "Ce site a été réalisé en partenariat avec le service culturel de l'Institut National de l'Audiovisuel (INA)"
 }
