--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -1,6 +1,7 @@
 {
-    "title": "Centenaire de l'Archevêché",
-    "paragraph_1": "L’Archevêché est une entité ecclésiale orthodoxe réunissant les églises de tradition russe en Europe occidentale.",
-    "paragraph_2": "Rattaché canoniquement au Patriarcat de Moscou, l’Archevêché est actuellement dirigé par Son Éminence le métropolite Jean de Doubna. Fidèle à son ancrage spirituel et liturgique issu de la tradition russe, il conserve les spécificités de son fonctionnement ecclésial et pastoral tel qu’établi par le Concile de Moscou de 1917-1918 ainsi que l'héritage de sa propre tradition.",
-    "paragraph_3": "Fondé en 1921 par le saint patriarche Tikhon et confiée au métropolite Euloge, l'Archevêché célèbre cette année son centenaire. A cette occasion et en ces temps d'épidémie de Covid19, nous avons réalisé ce site d'exposition virtuelle qui retrace les événements marquants de ces cent dernières années. Nous présentons notamment les contributions de l'Archevêché au patrimoine éclesial et culturel."
+    "title": "100-летие Архиепископии",
+    "paragraph_1": "Архиепископия - православное церковное образование, объединяющее церкви русской традиции в Западной Европе. ",
+    "paragraph_2": "Канонически присоединенная к Московскому Патриархату, Архиепископия в настоящее время управляется Высокопреосвященнейшим митрополитом Дубненским Иоанном. Верная своим духовным и литургическим корням, восходящим к русской традиции, она сохраняет установленную специфику церковно-пастырской деятельности. Московского Собора 1917-1918 гг., а также наследие собственной традиции.",
+    "paragraph_3": "Основанная в 1921 году святым патриархом Тихоном и вверенная митрополиту Евлогу, Архиепископия в этом году отмечает свое столетие. По этому случаю и во время эпидемии Covid19 мы создали этот виртуальный выставочный сайт, на котором прослеживаются важные события последнего столетия. Мы представляем, в частности, вклад Архиепископии в образовательное и культурное наследие.",
+    "paragraph_4": "Этот сайт создан в сотрудничестве с культурной службой Французского национального аудиовизуального института (INA)."
 }
