modification de la page d'accueil

--- a/locales/ru/home.json
+++ b/locales/ru/home.json
@@ -1,7 +1,7 @@
 {
     "title": "100-летие Архиепископии",
     "paragraph_1": "Архиепископия - православное церковное образование, объединяющее церкви русской традиции в Западной Европе. ",
-    "paragraph_2": "Канонически присоединенная к Московскому Патриархату, Архиепископия в настоящее время управляется Высокопреосвященнейшим митрополитом Дубненским Иоанном. Верная своим духовным и литургическим корням, восходящим к русской традиции, она сохраняет установленную специфику церковно-пастырской деятельности. Московского Собора 1917-1918 гг., а также наследие собственной традиции.",
-    "paragraph_3": "Основанная в 1921 году святым патриархом Тихоном и вверенная митрополиту Евлогу, Архиепископия в этом году отмечает свое столетие. По этому случаю и во время эпидемии Covid19 мы создали этот виртуальный выставочный сайт, на котором прослеживаются важные события последнего столетия. Мы представляем, в частности, вклад Архиепископии в образовательное и культурное наследие.",
-    "paragraph_4": "Этот сайт создан в сотрудничестве с культурной службой Французского национального аудиовизуального института (INA)."
+    "paragraph_2": "Канонически присоединенная к Московскому Патриархату, Архиепископия в настоящее время управляется Высокопреосвященнейшим митрополитом Дубненским Иоанном. Верная своим духовным и литургическим корням, восходящим к русской православной традиции, она сохраняет установленную специфику (установленные правила?) церковно-пастырской деятельности. Московского Собора 1917-1918 гг., а также наследие собственной традиции.",
+    "paragraph_3": "Основанная в 1921 году святым патриархом Тихоном и вверенная митрополиту Евлогу, Архиепископия в этом году отмечает свое столетие. По этому случаю и из-за ограничений, вызванных эпидемией Covid19, мы создали этот виртуальный выставочный сайт, который рассказывает о важнейших событиях прошедших ста лет.Мы представляем, в частности, вклад Архиепископии в развитие образования и культуры",
+    "paragraph_4": "Этот сайт создан в сотрудничестве с  отделом культуры Французского национального аудиовизуального института (INA)."
 }
